--- a/Form.html
+++ b/Form.html
@@ -6,14 +6,12 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-<header >
+<header style="border-style:solid; background-color:pink;" >
 <h2>Register Form</h2>
 </header>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+
+
 
 <form>
 <table>
